fix: macro editor cut off

--- a/packages/uhk-web/src/app/components/macro/action-editor/tab/key/macro-key.component.scss
+++ b/packages/uhk-web/src/app/components/macro/action-editor/tab/key/macro-key.component.scss
@@ -16,9 +16,9 @@
     &__action {
         &-container {
             padding-left: 1.5rem;
-            margin-right: -3rem;
+            margin-right: -2.5rem;
 
-            @include media-breakpoint-down(md) {
+            @include media-breakpoint-down(lg) {
                 margin-right: 0;
             }
         }
